Moved block registration to separate class and started moving to HumilityVAL library